--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,34 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
-# https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
-.project
-.settings
+
+# vi
+*.swp
+
+# PadoGrid workspace
+/.addonenv.sh
+/initenv.sh
+/setenv.sh
+bundles
+lib
+plugins
+
+# PadoGrid workspace directories
+#apps
+#clusters
+docker
+k8s
+pods
+.workspace
+.cluster
+
+# Bundle specifics
+archive
+log
+lib
+desktop
+setenv.sh0
+build
+run
+stats
